// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarContent renders children correctly 1`] = `
<div
  className="spotlight__content"
>
  <div>
    My Child
  </div>
</div>
`;

exports[`SidebarContent renders correctly 1`] = `
<div
  className="spotlight__content"
/>
`;
